// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viteServerFactory createServer config istanbulPlugin should be used if enable coverage 1`] = `
{
  "appType": "custom",
  "build": {
    "sourcemap": true,
  },
  "optimizeDeps": {
    "entries": [],
  },
  "plugins": [
    {
      "name": "vite:istanbul",
    },
  ],
  "root": "./",
  "server": {
    "base": "__vite__",
    "middlewareMode": true,
    "watch": {
      "ignored": [
        "**/coverage/**",
      ],
    },
  },
}
`;

exports[`viteServerFactory createServer config merge user config 1`] = `
{
  "appType": "custom",
  "base": "a/b/c/",
  "build": {
    "sourcemap": undefined,
  },
  "configFile": false,
  "optimizeDeps": {
    "entries": [],
  },
  "plugins": [
    false,
  ],
  "root": "./",
  "server": {
    "base": "__vite__",
    "middlewareMode": true,
    "watch": {
      "ignored": [
        "**/coverage/**",
      ],
    },
  },
}
`;
